# podcast-script

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PROJECT_BRIEF.md  PROJECT_PLAN.md  README.md  SRS.md  SYSTEM_DESIGN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pip-audit.yml
docs/: ARCHITECTURE.md  DOGFOODING.md
docs/adr/: 0001-adr-format-nygard.md  0002-pipes-and-filters-pipeline.md  0003-whisper-backend-protocol.md  0004-streaming-per-segment-transcribe.md  0005-atomic-output-via-temp-and-rename.md  0006-error-to-exit-code-via-typed-exceptions.md  0007-flat-src-package-layout.md  0008-rich-progress-and-logfmt-coexistence.md  0009-backend-load-ordering.md  0010-pipeline-level-progress-tick.md  0011-lazy-imports-for-heavy-deps.md  0012-event-catalogue-freeze.md  0013-config-stdlib-tomllib-dataclass.md  0014-sigint-keyboardinterrupt-handling.md  0015-debug-dir-pre-existence-policy.md  0016-pcm-float32-mono-16khz.md  0017-three-tier-test-strategy.md  README.md
examples/: CREDITS.md  build_sample.sh
examples/sources/: CHECKSUMS.txt
src/podcast_script/: __init__.py  atomic_write.py  cli.py  config.py  decode.py  errors.py  logging_setup.py  pipeline.py  progress.py  render.py  segment.py
src/podcast_script/backends/: __init__.py  base.py  faster.py  mlx.py
tests/: test_atomic_write.py  test_cli.py  test_config.py  test_decode.py  test_errors.py  test_faster_backend.py  test_first_run_notice.py  test_integration_ec3.py  test_integration_tiny.py  test_logging_setup.py  test_mlx_backend.py  test_pipeline.py  test_progress.py  test_render.py  test_segment.py  test_tty_harness.py
tests/contract/: __init__.py  conftest.py  test_first_run_notice.py  test_whisper_protocol.py
tests/fakes/: __init__.py  whisper.py
tests/fixtures/: sample_tiny.md
tests/integration/: __init__.py  test_failure_injection.py  test_integration_ec3.py  test_integration_tiny.py  test_tty_harness.py
tests/unit/: __init__.py  test_cli.py  test_errors.py  test_faster_backend.py  test_mlx_backend.py  test_segment_property.py  test_select_backend.py  test_smoke.py
