[project]
name = "podcast-script"
version = "0.0.0"
description = "Transcribe podcasts to Markdown with music segment markers."
requires-python = ">=3.12"
authors = [{ name = "Juan García" }]
dependencies = [
    "faster-whisper>=1.0",
    "huggingface_hub>=0.24",
    "inaspeechsegmenter==0.7.6",
    "numpy>=2.0",
    "rich>=13.7",
    "typer>=0.25.0",
]

[project.scripts]
podcast-script = "podcast_script.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_script"]

[tool.hatch.build.targets.sdist]
include = ["src/podcast_script", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
