[project]
name = "podcast-script"
version = "0.0.0"
description = "Transcribe podcasts to Markdown with music segment markers."
requires-python = ">=3.12"
authors = [{ name = "Juan García" }]
dependencies = [
    "faster-whisper>=1.0",
    "huggingface_hub>=0.24",
    "inaspeechsegmenter==0.7.6",
    "mlx-whisper>=0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Pinned <2 for inaSpeechSegmenter 0.7.6 compatibility — its 0.7.x
    # branch uses ``np.lib.pad`` (removed in 2.x) and the older positional
    # forms of ``np.stack``/``np.concatenate`` that numpy 2.x rejects.
    # 0.8.0 fixes the numpy compat but adds ``tensorflow[and-cuda]`` which
    # breaks Apple Silicon; revisit when an Apple-Silicon-clean release
    # lands.
    "numpy>=1.26,<2.0",
    "rich>=13.7",
    "tf-keras>=2.18.0",
    "typer>=0.25.0",
]

[project.scripts]
podcast-script = "podcast_script.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_script"]

[tool.hatch.build.targets.sdist]
include = ["src/podcast_script", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# mlx-whisper is darwin/arm64-only (PEP 508 marker in [project]) and
# ships no type stubs. Waiving missing-imports and missing-stubs here
# so strict mode stays clean on Ubuntu CI (where mlx_whisper is not
# installed) and on macOS CI (where it is installed but untyped).
[[tool.mypy.overrides]]
module = ["mlx_whisper", "mlx_whisper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-m", "not slow"]
markers = [
    # Tier 3 integration tests on the real examples/sample.mp3 fixture
    # (POD-031). Skipped by default — opt in with `pytest -m slow` or
    # `pytest -m "slow or not slow"`. CI runs the slow suite on a
    # separate job so the unit-tier feedback loop stays sub-second.
    "slow: end-to-end tests that decode + transcribe; require ffmpeg + a Whisper model on disk",
]
