[project]
name = "podcast-script"
version = "0.0.0"
description = "Transcribe podcasts to Markdown with music segment markers."
requires-python = ">=3.12"
authors = [{ name = "Juan García" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    # Major-version capped (R-14, R-17 mitigation). Lower bound matches the
    # current locked minor so a downstream venv can't silently downgrade
    # below what CI tests against. Dependabot's grouped weekly PR
    # (.github/dependabot.yml) brings minor + patch bumps under the cap;
    # major bumps stay individual review per the cap shape.
    "faster-whisper>=1.2,<2.0",
    "huggingface_hub>=1.12,<2.0",
    "inaspeechsegmenter==0.7.6",
    # mlx-whisper is in 0.x — SemVer treats 0.x minors as breakable, so
    # the symmetric "next breakable bump" cap is <0.5, not <1.0. Tighter
    # than the >=1.0 deps' major-cap on purpose; loosen to <1.0 once
    # mlx-whisper crosses 1.0.
    "mlx-whisper>=0.4,<0.5 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Pinned <2 for inaSpeechSegmenter 0.7.6 compatibility — its 0.7.x
    # branch uses ``np.lib.pad`` (removed in 2.x) and the older positional
    # forms of ``np.stack``/``np.concatenate`` that numpy 2.x rejects.
    # 0.8.0 fixes the numpy compat but adds ``tensorflow[and-cuda]`` which
    # breaks Apple Silicon; revisit when an Apple-Silicon-clean release
    # lands.
    "numpy>=1.26,<3.0",
    "rich>=13.7",
    "tf-keras>=2.18.0",
    "typer>=0.25.0",
]

[project.scripts]
podcast-script = "podcast_script.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_script"]

[tool.hatch.build.targets.sdist]
include = ["src/podcast_script", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    # POD-032 — property tests for the segment-merge module (NFR-3 / NFR-4)
    # plus the NFR-8 100% line-coverage gate. Both are dev-only, so the
    # ADR-0011 lazy-import boundary and ADR-0013 no-new-runtime-deps
    # invariants are unaffected.
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# mlx-whisper is darwin/arm64-only (PEP 508 marker in [project]) and
# ships no type stubs. Waiving missing-imports and missing-stubs here
# so strict mode stays clean on Ubuntu CI (where mlx_whisper is not
# installed) and on macOS CI (where it is installed but untyped).
[[tool.mypy.overrides]]
module = ["mlx_whisper", "mlx_whisper.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = false
source = ["src/podcast_script"]

[tool.coverage.report]
# Standard exclusions on top of the explicit ``# pragma: no cover``
# annotations the source carries. ``if TYPE_CHECKING:`` blocks are
# documentation surfaces (typing-only Protocols, structural
# placeholders) — never reached at runtime.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-m", "not slow and not contract"]
# Warnings policy — NFR-10 (logfmt key=value on stderr only). Anything
# that escapes the runtime suppression in `InaSpeechSegmenter` is a real
# regression: it leaks Python warnings into the user's pipe and breaks
# the grep contract. Production audio routinely has silent intros /
# outros, which trigger inaSpeechSegmenter's z-score normalisation on
# near-zero-variance frames, so the suppression has to be airtight.
#
# No whitelist needed at the pytest layer: known-benign upstream noise
# (the SciPy DeprecationWarning + the numpy invalid-value
# RuntimeWarnings — SPK-1 fragility, PROJECT_PLAN §10.1 R-1) is silenced
# at the runtime boundary in `src/podcast_script/segment.py`. Adding
# entries here would mask a future regression in our own code.
filterwarnings = ["error"]
markers = [
    # Tier 3 integration tests on the real examples/sample.mp3 fixture
    # (POD-031). Skipped by default — opt in with `pytest -m slow` or
    # `pytest -m "slow or not slow"`. CI runs the slow suite on a
    # separate job so the unit-tier feedback loop stays sub-second.
    "slow: end-to-end tests that decode + transcribe; require ffmpeg + a Whisper model on disk",
    # Tier 2 contract tests asserting the WhisperBackend Protocol
    # invariants run identically against FakeBackend + each real
    # backend (POD-030, ADR-0017). Skipped by default — opt in with
    # `pytest -m contract`. CI runs the contract suite on a dedicated
    # step (Ubuntu + macOS-14 matrix) so the unit-tier feedback loop
    # stays sub-second; real-backend parametrisations skip cleanly when
    # their library is not importable per ADR-0011.
    "contract: WhisperBackend Protocol invariants run vs FakeBackend + real backends (Tier 2)",
]
